fix: rename deploy job to build in workflow and update deploy configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,5 @@ jobs:
               PGUser=${{ secrets.PG_USER }} \
               PGPassword=${{ secrets.PG_PASSWORD }} \
               PGDatabase=${{ secrets.PG_DATABASE }} \
-            --capabilities CAPABILITY_IAM
+            --capabilities CAPABILITY_IAM \
+            --region ${{ secrets.AWS_REGION }}
