--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
             --stack-name mongo-to-postgres-migration \
             --s3-bucket samclisourcebucket-123454 \
             --parameter-overrides \
+              "VpcId=vpc-03e0d958406d5cb79" \
+              "SubnetIds=subnet-03ee0d8610a751d07,subnet-07368c456ed3e8211" \
               "MongoURI=${{ secrets.MONGO_URI }}" \
               "PGHost=${{ secrets.PG_HOST }}" \
               "PGUser=${{ secrets.PG_USER }}" \
