--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,12 +40,12 @@ jobs:
             --stack-name mongo-to-postgres-migration \
             --s3-bucket samclisourcebucket-123454 \
             --parameter-overrides \
-              "VpcId=${{ env.VPC_ID }}" \
-              "SubnetIds=${{ env.SUBNET_IDS }}" \
+              VpcId="${{ env.VPC_ID }}" \
+              SubnetIds="${{ env.SUBNET_IDS }}" \
               "MongoURI=${{ secrets.MONGO_URI }}" \
               "PGHost=${{ secrets.PG_HOST }}" \
               "PGUser=${{ secrets.PG_USER }}" \
               "PGPassword=${{ secrets.PG_PASSWORD }}" \
               "PGDatabase=${{ secrets.PG_DATABASE }}" \
             --capabilities CAPABILITY_IAM \
-            --region "${{ env.AWS_REGION }}"
+            --region "${{ secrets.AWS_REGION }}"
