--- a/template.yaml
+++ b/template.yaml
@@ -11,6 +11,27 @@ Parameters:
     Type: List<AWS::EC2::Subnet::Id>
     Description: Subnet IDs for Lambda functions
     Default: subnet-03ee0d8610a751d07,subnet-07368c456ed3e8211
+  PGHost:
+    Type: String
+    Description: PostgreSQL host endpoint
+
+  PGUser:
+    Type: String
+    Description: PostgreSQL username
+
+  PGPassword:
+    Type: String
+    Description: PostgreSQL password
+    NoEcho: true
+
+  PGDatabase:
+    Type: String
+    Description: PostgreSQL database name
+
+  MongoURI:
+    Type: String
+    Description: MongoDB connection URI
+    NoEcho: true
 
 Globals:
   Function:
