fix: comment out SAM build step in build workflow and add debug parameters in deploy workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Validate
         run: sam validate
 
-      - name: SAM build
-        run: |
-          sam build --parallel --use-container
+    #   - name: SAM build
+    #     run: |
+    #       sam build --parallel --use-container
