--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,16 @@ jobs:
       - name: Build
         run: sam build
 
+      - name: Debug Parameters
+        run: |
+          echo "Checking if secrets are set (will show as ****):"
+          echo "MONGO_URI: ${{ secrets.MONGO_URI != '' }}"
+          echo "PG_HOST: ${{ secrets.PG_HOST != '' }}"
+          echo "PG_USER: ${{ secrets.PG_USER != '' }}"
+          echo "PG_PASSWORD: ${{ secrets.PG_PASSWORD != '' }}"
+          echo "PG_DATABASE: ${{ secrets.PG_DATABASE != '' }}"
+          echo "AWS_REGION: ${{ secrets.AWS_REGION != '' }}"
+
       - name: Deploy
         run: sam deploy \ 
             --no-confirm-changeset \ 
