--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,16 +44,12 @@ jobs:
           echo "AWS_REGION: ${{ secrets.AWS_REGION != '' }}"
 
       - name: Deploy
-        run: sam deploy \ 
-            --no-confirm-changeset \ 
+        run: |
+          sam deploy \
+            --no-confirm-changeset \
             --no-fail-on-empty-changeset \
             --stack-name mongo-to-postgres-migration \
             --s3-bucket samclisourcebucket-123454 \
-            --parameter-overrides \
-              "MongoURI=${{ secrets.MONGO_URI }}" \
-              "PGHost=${{ secrets.PG_HOST }}" \
-              "PGUser=${{ secrets.PG_USER }}" \
-              "PGPassword=${{ secrets.PG_PASSWORD }}" \
-              "PGDatabase=${{ secrets.PG_DATABASE }}" \
+            --parameter-overrides MongoURI="${{ secrets.MONGO_URI }}" PGHost="${{ secrets.PG_HOST }}" PGUser="${{ secrets.PG_USER }}" PGPassword="${{ secrets.PG_PASSWORD }}" PGDatabase="${{ secrets.PG_DATABASE }}" \
             --capabilities CAPABILITY_IAM \
             --region "${{ secrets.AWS_REGION }}"
