--- a/template.yaml
+++ b/template.yaml
@@ -3,14 +3,10 @@ Transform: AWS::Serverless-2016-10-31
 Description: Serverless MongoDB to PostgreSQL Data Migration
 
 Parameters:
-  VpcId:
-    Type: AWS::EC2::VPC::Id
-    Description: VPC ID (default VPC)
-    Default: vpc-03e0d958406d5cb79
-  SubnetIds:
-    Type: List<AWS::EC2::Subnet::Id>
-    Description: Subnet IDs for Lambda functions
-    Default: subnet-03ee0d8610a751d07,subnet-07368c456ed3e8211
+  VpcStackName:
+    Type: String
+    Description: Name of the VPC infrastructure stack 
+    Default: MongoDBAtlasVPC
   PGHost:
     Type: String
     Description: PostgreSQL host endpoint
@@ -40,28 +36,17 @@ Globals:
     MemorySize: 128
     VpcConfig:
       SecurityGroupIds:
-        - !Ref LambdaSecurityGroup
-      SubnetIds: !Ref SubnetIds
+        - Fn::ImportValue: !Sub "${VpcStackName}-LAMBDA-SG"
+      SubnetIds: 
+        Fn::Split:
+          - ","
+          - Fn::ImportValue: !Sub "${VpcStackName}-PRIVATE-SUBNETS"
     Environment:
       Variables:
         LOG_LEVEL: INFO
         BATCH_SIZE: 1000
 
 Resources:
-  LambdaSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for Lambda functions
-      VpcId: !Ref VpcId
-      SecurityGroupEgress:
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 27017
-          ToPort: 27017
-          CidrIp: 0.0.0.0/0
 
   MongoPythonLayer:
     Type: AWS::Serverless::LayerVersion
@@ -75,6 +60,7 @@ Resources:
 
   ReadMongoFunction:
     Type: AWS::Serverless::Function
+    DependsOn: MongoPythonLayer
     Properties:
       CodeUri: functions/read_mongo/
       Handler: app.lambda_handler
@@ -109,8 +95,11 @@ Resources:
         - AWSSecretsManagerGetSecretValuePolicy:
             SecretArn: !Ref PostgresSecrets
 
+  # Add metadata to describe the dependency on the VPC stack
   MongoDBSecrets:
     Type: AWS::SecretsManager::Secret
+    Metadata:
+      DependsOn: !Ref VpcStackName
     Properties:
       Description: MongoDB connection details
       SecretString: !Sub '{"uri": "${MongoURI}"}'
